--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
   </main>
   <section id="explore" style="height: 100vh; background-color: #f0f0f0; display: flex; justify-content: center; align-items: center;">
     <h1>COMING SOON</h1>
+    <h3>Made by Arpan</h3>
 </section>
 
   <h1>COMING SOON</h1>
